feat(applications-service-api): complete submission endpoint
